--- a/chaiaurDjango/chai/templates/chai/hello.html
+++ b/chaiaurDjango/chai/templates/chai/hello.html
@@ -5,5 +5,5 @@ Home page
 {% endblock  %}
 
 {% block content  %}
-<h1>Chai aur code | home page</h1>
+<h1>Hello what do you think about me | home page</h1>
 {% endblock  %}
