Add Tailwind CSS integration and update templates for improved styling

--- a/chaiaurDjango/templates/website/index.html
+++ b/chaiaurDjango/templates/website/index.html
@@ -5,5 +5,6 @@ Home page
 {% endblock  %}
 
 {% block content  %}
-<h1>Chai aur code | home page</h1>
+<h1 class="bg-red-500 text-3xl">Chai aur code | home page</h1>
+<p class="text-center w-20 bg-orange-400">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis ipsam soluta suscipit, magnam ipsum repudiandae veniam aliquid cupiditate quaerat facere eligendi distinctio, voluptatum, praesentium ad!</p>
 {% endblock  %}
