--- a/chaiaurDjango/templates/layout.html
+++ b/chaiaurDjango/templates/layout.html
@@ -1,3 +1,4 @@
+{% load static tailwind_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -10,11 +11,12 @@
         {% endblock  %}
     </title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    {% tailwind_css %}
+
 </head>
 <body>
     <nav>This is my navbar</nav>
     {% block content %}{% endblock %}
     
-
 </body>
 </html>
