Refactor code structure for improved readability and maintainability

--- a/chaiaurDjango/chai/templates/chai/hello.html
+++ b/chaiaurDjango/chai/templates/chai/hello.html
@@ -6,4 +6,27 @@ Home page
 
 {% block content  %}
 <h1>Hello what do you think about me | home page</h1>
+
+<div class="grid grid-cols-3 gap-4" >
+
+    {% for chai in chais %}
+    <div class="bg-gray-500 p-5">
+        <img class="rounded" src="{{chai.image.url}}" alt="">
+        <h3 class="text-2xl font-bold">{{chai.name}}</h3>
+        <a href="#" >
+            <button
+            type="button"
+            class="inline-flex items-center w-[100%] justify-center px-4 py-2
+            border border-transparent text-sm font-medium rounded-md
+            text-white bg-orange-600 hover:bg-orange-700
+            focus:outline-none focus:ring-2 focus:ring-offset-2
+            focus:ring-orange-500"
+            >
+                {{chai.type}} - {{chai.id}}
+            </button>
+        </a>
+    </div>
+    {% endfor %}
+</div>
+
 {% endblock  %}
